fix? overflow x hidden

--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -1,3 +1,11 @@
+
+html,body
+{
+
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 /* Landing Section 1 Styles */
 .landing {
   height: 100vh;
